--- a/index.html
+++ b/index.html
@@ -6,7 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>diaom</title>
     <link rel="icon" href="https://raw.githubusercontent.com/godswhale/diaom/main/image/logo.png" type="image/png">
-    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/godswhale/diaom/main/css/index.css">
+    <!--<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/godswhale/diaom/main/css/index.css">-->
+    <style>
+        body {
+            background-color: #000;
+        }
+        .heads {
+            display: flex;
+            height: 80px;
+            border-bottom: 1px solid #fff;
+            display: flex;
+            align-items: center;
+            color: #fff;
+        }
+        .heads img {
+            height: 50px;
+            width: 50px;
+            border-radius: 50%;
+            margin-left: 10px;
+        }
+        #diaom {
+            margin-left: 10px;
+            color: #fff;
+            font-weight: 600;
+        }
+        
+        .token,.about {
+            /*display: flex;
+            margin: 0 auto;*/
+            text-align: center;
+            font-weight: 600;
+            color: #beb9b9;
+            margin-top: 60px;
+        }
+        .synopsis,
+        .promise {
+            text-align: center;
+            font-weight: 600;
+            color: #393737;
+            margin-top: 60px;
+            background-color: #fff;
+            padding: 10px;
+        }
+        .promise-text,.synopsis-text {
+            font-weight: 700;
+            color: #000;
+            text-decoration: underline;
+            padding-bottom: 5px;
+            text-underline-offset: 10px;
+            text-decoration-thickness: 2px;
+        }
+        .token-text,.about-text {
+            font-weight: 700;
+            color: #fff;
+            text-decoration: underline;
+            padding-bottom: 5px;
+            text-underline-offset: 10px;
+            text-decoration-thickness: 2px;
+        }
+        .bott {
+            text-align: center;
+            font-weight: 500;
+            color: #fff;
+            height: 190px;
+            background-color: #232222;
+            padding: 20px;
+        }
+        .Copyright {
+            margin-bottom: 10px;
+        }
+
+        #twitter {
+            width: 55px;
+            height: 55px;
+            margin: 20px;
+            border-radius: 50%;
+        }
+        #logo {
+            width: 55px;
+            height: 55px;
+            margin: 20px;
+            border-radius: 50%;
+        }
+        .mark {
+            margin-top: 0px;
+        }
+        
+    </style>
 </head>
 <body>
   <div>
