--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             font-weight: 600;
         }
         
-        .token,.about {
+        .token,.about,.synopsis,.promise  {
             /*display: flex;
             margin: 0 auto;*/
             text-align: center;
-            font-weight: 600;
-            color: #beb9b9;
+            font-weight: 500;
+            color: #efeded;
             margin-top: 60px;
         }
-        .synopsis,
+        /*.synopsis,
         .promise {
             text-align: center;
             font-weight: 600;
@@ -55,8 +55,8 @@
             padding-bottom: 5px;
             text-underline-offset: 10px;
             text-decoration-thickness: 2px;
-        }
-        .token-text,.about-text {
+        }*/
+        .token-text,.about-text,.promise-text,.synopsis-text {
             font-weight: 700;
             color: #fff;
             text-decoration: underline;
@@ -69,7 +69,7 @@
             font-weight: 500;
             color: #fff;
             height: 190px;
-            background-color: #232222;
+            background-color: #5f5d5d;
             padding: 20px;
         }
         .Copyright {
@@ -93,6 +93,13 @@
         }
         
     </style>
+    <script type="text/javascript">
+        document.addEventListener("DOMContentLoaded", function() {
+            document.getElementById("twitter").addEventListener("click", function(){
+                window.location.href = "https://x.com/Creator145176?s=20";
+            });
+        })
+    </script>
 </head>
 <body>
   <div>
