--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             text-align: center;
             font-weight: 500;
             color: #fff;
-            height: 190px;
-            background-color: #5f5d5d;
+            height: 160px;
+            background-color: #4d4c4c;
             padding: 20px;
         }
         .Copyright {
@@ -77,21 +77,20 @@
         }
 
         #twitter {
-            width: 55px;
-            height: 55px;
+            width: 40px;
+            height: 40px;
             margin: 20px;
             border-radius: 50%;
         }
         #logo {
-            width: 55px;
-            height: 55px;
+            width: 40px;
+            height: 40px;
             margin: 20px;
             border-radius: 50%;
         }
         .mark {
             margin-top: 0px;
         }
-        
     </style>
     <script type="text/javascript">
         document.addEventListener("DOMContentLoaded", function() {
