--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
     <div class="heads">
         <img src="https://raw.githubusercontent.com/godswhale/diaom/main/image/logo.png">
         <p id="diaom">DIAOM</p>
+        <a href="#" id="pre-sale">预售</a>
     </div>
     <div class="content">
         <div class="token">
